fix: popup window no longer squishes

--- a/src/css/options.css
+++ b/src/css/options.css
@@ -3,6 +3,8 @@
 
 html{
     width: 420px;
+    display: flex;
+    flex-direction: column;
 }
 
 .row.skewered>div:first-child {
